--- a/bmlib.html
+++ b/bmlib.html
@@ -76,8 +76,7 @@ pre {
 
 <div class="row">
     <div class="col-md-2">
-         <!-- <a href="optimlib_docs_pso.html#examples" target="_blank"><img src="pics/table_fn_3d.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>  -->
-        <!-- <script>showImage();</script> -->
+         <img src="pics/bmr_plot_irf.png" class="img-rounded pull-left" alt="" width="260" height="200">
     </div>
     <div class="col-md-8">
         <br>
@@ -91,10 +90,7 @@ pre {
         <a class="github-button" href="https://github.com/kthohr/bmlib/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/bmlib/network" data-count-api="/repos/kthohr/bmlib#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/bmlib on GitHub">Fork</a></p>
     </div>
     <div class="col-md-2">
-        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
-        <!-- <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a> -->
-        <!-- <script>showImage2();</script> -->
+        <img src="pics/bmr_plot_bvarw.png" class="img-rounded pull-right" alt="" width="260" height="200">
     </div>
 </div>
 
