--- a/bmr.html
+++ b/bmr.html
@@ -95,7 +95,7 @@ pre {
 
 <br>
 
-<p>BMR (Bayesian Macroeconometrics in R) is an R interface to the Bayesian Macroeconometrics C++ library, used for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
+<p>BMR (<b><i>B</i></b>ayesian <b><i>M</i></b>acroeconometrics in <b><i>R</i></b>) is an R interface to <a href="bmlib.html" target="_blank">BMLib</a>, a templated C++ library for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
 
 <p><strong>Features</strong></p>
 <ul>
