--- a/bmlib.html
+++ b/bmlib.html
@@ -158,7 +158,7 @@ make
 make install</pre>
 <p>The last line will install BMLib into <samp>/usr/local</sampe></p>
 
-<p>Options for configure:</p>
+<p>Configure options:</p>
 <ul>
     <li><code>-b dev</code> a 'development' build</li>
     <li><code>-c</code> a coverage build</li>
