--- a/optimlib.html
+++ b/optimlib.html
@@ -163,7 +163,7 @@ make
 make install</pre>
 <p>The last line will install OptimLib into <samp>/usr/local</sampe></p>
 
-<p>Options for configure:</p>
+<p>Configure options:</p>
 <ul>
     <li><code>-b dev</code> a 'development' build</li>
     <li><code>-c</code> a coverage build</li>
