--- a/trame.html
+++ b/trame.html
@@ -158,7 +158,7 @@ make install</pre>
 
 <p>This will install the library into <samp>/usr/local</sampe></p>
 
-<p>Options for configure:</p>
+<p>Configure options:</p>
 <ul>
     <li><code>-b dev</code> a 'development' build</li>
     <li><code>-c</code> a coverage build</li>
