--- a/mcmclib.html
+++ b/mcmclib.html
@@ -122,7 +122,7 @@ make
 make install</pre>
 <p>The last line will install MCMCLib into <samp>/usr/local</sampe></p>
 
-<p>Options for configure:</p>
+<p>Configure options:</p>
 <ul>
     <li><code>-b dev</code> a 'development' build</li>
     <li><code>-c</code> a coverage build</li>
