--- a/bmr.html
+++ b/bmr.html
@@ -122,7 +122,7 @@ install.packages("RcppArmadillo")
 install.packages("ggplot2")</pre>
 </ul>
 
-<p>The source code is available on <a href="https://github.com/kthohr/BMR" target="_blank">GitHub</a>. You need to install BMR from source.</p>
+<p>The source code is available on <a href="https://github.com/kthohr/BMR" target="_blank">GitHub</a>. <strong>You need to install BMR from source.</strong></p>
 <ul>
     <li>Perhaps the quickest way to install from source is via the 'devtools' package in R.</li>
     <li>First, make sure you have the appropriate development environment; if you're using a Mac, get Xcode from the App Store; if you're using Windows, get <a href="https://cran.r-project.org/bin/windows/Rtools/" target="_blank">Rtools</a>.</li>
