--- a/trame-rcpp.html
+++ b/trame-rcpp.html
@@ -49,7 +49,6 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
-            $("#bmrhead").load("bmr_header.html")
             $("#myfooter").load("footer.html")
         });
     </script>
@@ -130,7 +129,7 @@ install.packages("RcppArmadillo")
 install.packages("digest")</pre>
 </ul>
 
-<p>The source code is available on <a href="https://github.com/TraME-Project/TraME-Rcpp" target="_blank">GitHub</a>. You need to install TraME-Rcpp from source.</p>
+<p>The source code is available on <a href="https://github.com/TraME-Project/TraME-Rcpp" target="_blank">GitHub</a>. <strong>You need to install TraME-Rcpp from source.</strong></p>
 <ul>
     <li>Perhaps the quickest way to install from source is via the 'devtools' package in R.</li>
     <li>First, make sure you have the appropriate development environment; if you're using a Mac, get Xcode from the App Store; if you're using Windows, get <a href="https://cran.r-project.org/bin/windows/Rtools/" target="_blank">Rtools</a>.</li>
