--- a/navbar.html
+++ b/navbar.html
@@ -18,6 +18,9 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
+                    <li>
+                        <a href="docs/CV.pdf" target="_blank">>CV</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Code <b class="caret"></b></a>
                         <ul class="dropdown-menu">
