--- a/navbar.html
+++ b/navbar.html
@@ -19,7 +19,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="docs/CV.pdf" target="_blank">>CV</a>
+                        <a href="docs/CV.pdf" target="_blank">CV</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Code <b class="caret"></b></a>
