--- a/navbar.html
+++ b/navbar.html
@@ -69,15 +69,14 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <!-- <a href="links.html">Links</a> -->
                                 <a href="#">Links</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
