--- a/navbar.html
+++ b/navbar.html
@@ -24,6 +24,13 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Code <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li class="dropdown-submenu">
+                                <a tabindex="-1" href="#">BM</a>
+                                <ul class="dropdown-menu">
+                                    <li><a tabindex="-1" href="bmlib.html">BMLib</a></li>
+                                    <li><a tabindex="-1" href="bmr.html">BMR</a></li>
+                                </ul>
+                            </li>
                             <li>
                                 <a href="bmr.html">BMR</a>
                             </li>
