--- a/navbar.html
+++ b/navbar.html
@@ -31,11 +31,12 @@
                                     <li><a tabindex="-1" href="bmr.html">BMR</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="bmr.html">BMR</a>
-                            </li>
-                            <li>
-                                <a href="trame.html">TraME</a>
+                            <li class="dropdown-submenu">
+                                <a tabindex="-1" href="#">TraME</a>
+                                <ul class="dropdown-menu">
+                                    <li><a tabindex="-1" href="trame.html">C++</a></li>
+                                    <li><a tabindex="-1" href="trame-rcpp.html">R</a></li>
+                                </ul>
                             </li>
                             <li class="divider"></li>
                             <li>
