--- a/navbar.html
+++ b/navbar.html
@@ -27,8 +27,8 @@
                             <li class="dropdown-submenu">
                                 <a tabindex="-1" href="#">BM</a>
                                 <ul class="dropdown-menu">
-                                    <li><a tabindex="-1" href="bmlib.html">BMLib</a></li>
-                                    <li><a tabindex="-1" href="bmr.html">BMR</a></li>
+                                    <li><a tabindex="-1" href="bmlib.html">C++</a></li>
+                                    <li><a tabindex="-1" href="bmr.html">R</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-submenu">
