--- a/navbar.html
+++ b/navbar.html
@@ -46,10 +46,10 @@
                                 <a href="mcmclib.html">MCMC</a>
                             </li>
                             <li>
-                                <a href="optimlib.html">OptimLib</a>
+                                <a href="optimlib.html">Optim</a>
                             </li>
                             <li>
-                                <a href="statslib.html">StatsLib</a>
+                                <a href="statslib.html">Stats</a>
                             </li>
                             <li class="divider"></li>
                             <li>
