--- a/trame.html
+++ b/trame.html
@@ -160,11 +160,11 @@ make install</pre>
 
 <p>Configure options:</p>
 <ul>
-    <li><code>-b dev</code> a 'development' build</li>
+    <li><code>-b dev</code> a 'development' build with install names set to the build directory (as opposed to an install path)</li>
     <li><code>-c</code> a coverage build</li>
     <li><code>-l</code> specify a linear programming library to use; for example <code>-l glpk</code> or <code>-l gurobi</code></li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code></li>
-    <li><code>-o fast</code> aggressive optimization features enabled;</li>
+    <li><code>-o fast</code> aggressive compiler optimization features enabled</li>
     <li><code>-p</code> a parallelized build using OpenMP</li>
 </ul>
 
