--- a/mcmclib.html
+++ b/mcmclib.html
@@ -128,7 +128,7 @@ make install</pre>
     <li><code>-c</code> a coverage build</li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
     <li><code>-o fast</code> aggressive compiler optimization features enabled</li>
-    <li><code>-p</code> a parallelized build using OpenMP</li>
+    <li><code>-p</code> enable parallelization features (using OpenMP)</li>
 </ul>
 
     </div>
