--- a/trame.html
+++ b/trame.html
@@ -165,7 +165,7 @@ make install</pre>
     <li><code>-l</code> specify a linear programming library to use; for example <code>-l glpk</code> or <code>-l gurobi</code></li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code></li>
     <li><code>-o fast</code> aggressive compiler optimization features enabled</li>
-    <li><code>-p</code> a parallelized build using OpenMP</li>
+    <li><code>-p</code> enable parallelization features (using OpenMP)</li>
 </ul>
 
     </div>
