--- a/optimlib.html
+++ b/optimlib.html
@@ -167,7 +167,7 @@ make install</pre>
 <ul>
     <li><code>-b dev</code> a 'development' build with install names set to the build directory (as opposed to an install path)</li>
     <li><code>-c</code> a coverage build</li>
-    <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
     <li><code>-o fast</code> aggressive compiler optimization features enabled</li>
     <li><code>-p</code> enable parallelization features (using OpenMP)</li>
 </ul>
