--- a/bmlib_header.html
+++ b/bmlib_header.html
@@ -3,5 +3,6 @@
         <ol class="breadcrumb">
             <li><a href="http://www.kthohr.com">Home</a></li>
             <li><a href="bmlib.html">BMLib</a></li>
+            <li><a href="bmr.html">BMR</a></li>
     </div>
 </div>
