--- a/bmr_header.html
+++ b/bmr_header.html
@@ -2,6 +2,7 @@
     <div class="col-lg-12">
         <ol class="breadcrumb">
             <li><a href="http://www.kthohr.com">Home</a></li>
+            <li><a href="bmlib.html">BMLib</a></li>
             <li><a href="bmr.html">BMR</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">VARs <b class="caret"></b></a>
