--- a/statslib.html
+++ b/statslib.html
@@ -81,16 +81,25 @@ pre {
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>StatsLib</u></strong></h3>
-<p> &nbsp </p>
+<div class="row">
+    <div class="col-md-2">
+        <img src="pics/stats_pnorm.png" class="img-responsive center-block">
+    </div>
+    <div class="col-md-8">
+        <br>
+        <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>StatsLib</u></strong></h3>
+         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/stats" target="_blank"><img src="https://travis-ci.org/kthohr/stats.svg?branch=master" alt="StatsLib Build"></a> 
+         <a href="https://codecov.io/github/kthohr/stats?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/stats/coverage.svg?branch=master" alt="Coverage Status"></a></p> 
+         <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/stats/subscription" data-icon="octicon-eye" data-count-href="/kthohr/stats/watchers" data-count-api="/repos/kthohr/stats#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/stats on GitHub">Watch</a> 
+         <a class="github-button" href="https://github.com/kthohr/stats" data-icon="octicon-star" data-count-href="/kthohr/stats/stargazers" data-count-api="/repos/kthohr/stats#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/stats on GitHub">Star</a> 
+         <a class="github-button" href="https://github.com/kthohr/stats/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/stats/network" data-count-api="/repos/kthohr/stats#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/stats on GitHub">Fork</a></p> 
+    </div>
+    <div class="col-md-2">
+        <img src="pics/stats_qlaplace.png" class="img-responsive center-block">
+    </div>
+</div>
 
-<p><a href="https://travis-ci.org/kthohr/stats" target="_blank"><img src="https://travis-ci.org/kthohr/stats.svg?branch=master" alt="stats Build"></a>
-<a href="https://codecov.io/github/kthohr/stats?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/stats/coverage.svg?branch=master" alt="Coverage Status"></a></p>
-<p><a class="github-button" href="https://github.com/kthohr/stats/subscription" data-icon="octicon-eye" data-count-href="/kthohr/stats/watchers" data-count-api="/repos/kthohr/stats#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/stats on GitHub">Watch</a>
-<a class="github-button" href="https://github.com/kthohr/stats" data-icon="octicon-star" data-count-href="/kthohr/stats/stargazers" data-count-api="/repos/kthohr/stats#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/stats on GitHub">Star</a>
-<a class="github-button" href="https://github.com/kthohr/stats/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/stats/network" data-count-api="/repos/kthohr/stats#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/stats on GitHub">Fork</a></p>
-
-<hr>
+<br>
 
 <!-- <p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p> -->
 <p>StatsLib is a templated C++ library for fast computation of statistical distribution functions.</p>
