--- a/statslib.html
+++ b/statslib.html
@@ -123,9 +123,8 @@ pre {
 <p>Current version:</p>
 <ul>
     <li>The source code is available on <a href="https://github.com/kthohr/stats" target="_blank">GitHub</a>.</li>
+    <li>StatsLib is a header-only library. Simply include the gcem header files with your project.</li>
 </ul>
-
-<p>StatsLib is a header-only library, so no installation is required beyond copying the contents of the include folder.</p>
 
 <p>To build the test files:</p>
 <pre class="brush: bash;">
