--- a/statslib.html
+++ b/statslib.html
@@ -104,6 +104,8 @@ pre {
 <!-- <p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p> -->
 <p>StatsLib is a templated C++ library for fast computation of statistical distribution functions.</p>
 
+<hr>
+
 <b>Features</b>
 <br>
 <ul>
@@ -118,9 +120,9 @@ pre {
 
 <p><strong>License</strong>: StatsLib is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
 
-<hr>
+<hr style="height:2px;border-width:0;background-color:black">
 
-<p>Current version:</p>
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 <ul>
     <li>The source code is available on <a href="https://github.com/kthohr/stats" target="_blank">GitHub</a>.</li>
     <li>StatsLib is a header-only library. Simply include the gcem header files with your project.</li>
