--- a/statslib.html
+++ b/statslib.html
@@ -125,7 +125,7 @@ pre {
 <h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 <ul>
     <li>The source code is available on <a href="https://github.com/kthohr/stats" target="_blank">GitHub</a>.</li>
-    <li>StatsLib is a header-only library. Simply include the gcem header files with your project.</li>
+    <li>StatsLib is a header-only library. Simply include the StatsLib header files with your project.</li>
 </ul>
 
 <p>To build the test files:</p>
