--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="js/jquery.js"></script>
     <script>
         $(function(){
-            $("#myheadhtml").load("head_code.html")
+            $("head").load("head_code.html")
             $("#mynavbar").load("navbar.html")
             $("#myfooter").load("footer.html")
         });
