--- a/bmr_docs_vars_cvar.html
+++ b/bmr_docs_vars_cvar.html
@@ -87,7 +87,7 @@ pre {
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: VAR</strong></h4></a>
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: Classical VAR</strong></h4></a>
             </div>
             <div id="collapse1" class="panel-collapse collapse">
                 <div class="panel-body">
