--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,10 @@
 <footer class="footer">
-    <div class="container">
-        <p class="text-muted">Copyright &copy; 2017 Keith O'Hara</p>
+    <div class="container-fluid">
+        <div class="row center">
+            <p class="text-muted col-xs-3 text-center">Copyright &copy; 2017 Keith O'Hara</p>
+            <div class="text-muted2 col-xs-6 text-center">
+                <a href="http://www.kthohr.com"><img class="img" src="pics/footer_logo.png" alt="" width="40" height="40"></a>
+            </div>
+        </div>
     </div>
 </footer>
