--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p>Economics</p>
                         <div class="btn-group" role="group" aria-label="Bayesian Macroeconometrics">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            BM <span class="caret"></span></button>
+                            Macroeconometrics <span class="caret"></span></button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="bmlib.html">C++</a></li>
                                 <li><a href="bmr.html">R</a></li>
