--- a/navbar.html
+++ b/navbar.html
@@ -25,7 +25,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Code <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-submenu">
-                                <a tabindex="-1" href="#">BM</a>
+                                <a tabindex="-1" href="#">Macroeconometrics</a>
                                 <ul class="dropdown-menu">
                                     <li><a tabindex="-1" href="bmlib.html">C++</a></li>
                                     <li><a tabindex="-1" href="bmr.html">R</a></li>
