--- a/optimlib.html
+++ b/optimlib.html
@@ -10,7 +10,7 @@
     <meta name="description" content="OptimLib: a C++ numerical optimization library.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="optimization, root finding, differential evolution, BFGS, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
+    <meta name="keywords" content="Optimization, C++, C++11, Differential Evolution, Particle Swarm Optimization, Root Finding, OpenMP, Parallel Optimization, BFGS, L-BFGS, Keith O'Hara, Economics, Econometrics, Research, NYU, New York University" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
