--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Bayesian Macroeconometrics in R (BMR)">
+    <meta name="description" content="OptimLib: a C++ numerical optimization library.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="Optimization, C++, Differential Evolution, Particle Swarm Optimization, OpenMP, Parallel Optimization, BFGS, L-BFGS, Keith O'Hara, Economics, Econometrics, Research, NYU, New York University" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
