--- a/index.html
+++ b/index.html
@@ -71,8 +71,26 @@
                 <!-- <h1 class="page-header"> Welcome </h1> -->
                 <h1> Welcome </h1> 
                 <hr style="height:2px;border-width:0;background-color:black">
+                <p>My name is Keith O'Hara, I am a Ph.D. Candidate at NYU's Department of Economics.</p>
+
+                <br>
+
+                <p>My research interests include:</p>
+                <ul>
+                    <li>Econometric Theory</li>
+                    <li>Empirical Macroeconomics</li>
+                    <li>Computational Methods</li>
+                </ul>
+
+                <br>
+
+                <p>Below you can find links to my work.</p>
+
+                <hr style="height:2px;border-width:0;background-color:black">
             </div>
-            <!-- <p><i class="fa fa-exclamation-triangle fa-2x"></i> This site is a work in progress</p> -->
+        </div>
+
+        <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
