--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!-- <h1 class="page-header"> Welcome </h1> -->
                 <h1> Welcome </h1> 
                 <hr style="height:2px;border-width:0;background-color:black">
-                <p>My name is Keith O'Hara, I am a Ph.D. Candidate at NYU's Department of Economics.</p>
+                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at NYU's Department of Economics.</p>
 
                 <br>
 
