--- a/bmr_docs_vars_bvars.html
+++ b/bmr_docs_vars_bvars.html
@@ -84,7 +84,7 @@ pre {
 <br>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: BVAR with Steady-State Prior</strong></h4></a>
@@ -255,7 +255,7 @@ and $U^\top = (\mathbb{I}_{Mp}, \mathbb{I}_{q} \otimes \beta_1^\top, \ldots, \ma
 
 <br>
 
-<pre class="brush: R;">
+<pre class="brush: ruby;">
 rm(list=ls())
 library(BMR)
 
