--- a/bmr_docs_vars_bvartvp.html
+++ b/bmr_docs_vars_bvartvp.html
@@ -84,7 +84,7 @@ pre {
 <br>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: BVAR with Time-Varying Parameters</strong></h4></a>
@@ -330,7 +330,7 @@ Proceeding to draw $Q^{(h)}$ and $\Sigma^{(h)}$ is standard.
 
 <br>
 
-<pre class="brush: R;">
+<pre class="brush: ruby;">
 rm(list=ls())
 library(BMR)
 
