--- a/bmr_docs_vars_bvarw.html
+++ b/bmr_docs_vars_bvarw.html
@@ -84,7 +84,7 @@ pre {
 <br>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: BVAR with Normal-inverse Wishart Prior</strong></h4></a>
@@ -223,7 +223,7 @@ where
 
 <br>
 
-<pre class="brush: R;">
+<pre class="brush: ruby;">
 rm(list=ls())
 library(BMR)
 
