--- a/bmr_docs_vars_cvar.html
+++ b/bmr_docs_vars_cvar.html
@@ -84,7 +84,7 @@ pre {
 <br>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: Classical VAR</strong></h4></a>
@@ -214,7 +214,7 @@ Then, sample with replacement from $\widehat{\varepsilon}$, <code>n_draws</code>
 
 <br>
 
-<pre class="brush: R;">
+<pre class="brush: ruby;">
 rm(list=ls())
 library(BMR)
 
