--- a/trame-rcpp.html
+++ b/trame-rcpp.html
@@ -124,7 +124,7 @@ pre {
 
 <ul>
     <li>Execute the following commands, post installation of R itself, and you should be good to go:</li>
-    <pre>
+<pre class="brush: ruby;">
 install.packages("RcppArmadillo")
 install.packages("digest")</pre>
 </ul>
@@ -140,7 +140,7 @@ curl -O http://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
 sudo tar fvxz gfortran-4.8.2-darwin13.tar.bz2 -C / </pre>
         </ul>
         <li>Then simply run the following commands in R:</li>
-  <pre width="20">
+<pre class="brush: ruby;">
 install.packages("devtools")
 library(devtools)
 install_github("TraME-Project/TraME-Rcpp")</pre>
