--- a/statslib.html
+++ b/statslib.html
@@ -124,7 +124,7 @@ pre {
 
 <h3 style="text-align: left;"><strong style="font-size: 95%;">Available distributions and Examples</strong></h3>
 
-<p>pdf, cdf, quantile, and random variable generation:</p>
+<p>cdf, pdf, quantile, and random variable generation:</p>
 <ul>
     <li>Bernoulli</li>
     <li>Beta</li>
