--- a/mcmclib.html
+++ b/mcmclib.html
@@ -10,7 +10,7 @@
     <meta name="description" content="OptimLib: a C++ numerical optimization library.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="optimization, root finding, differential evolution, BFGS, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
+    <meta name="keywords" content="mcmc, Metropolis Hastings, RWMH, Differential Evolution, Metropolis-adjusted Langevin algorithm, MALA, Hamiltonian Monte Carlo, HMC, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
@@ -96,7 +96,8 @@
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>Parallelized C++11 implementation of the Random Walk Metropolis-Hasting and Differential Evolution MCMC methods.</li>
+    <li>C++11 implementations of the well-known Random Walk Metropolis-Hastings (RWMH), Hamiltonian Monte Carlo (HMC), and Metropolis-adjusted Langevin algorithm (MALA) MCMC methods.</li>
+    <li>Support for multi-modal distributions with a parallelized implementation of the Differential Evolution MCMC algorithm.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
