--- a/statslib.html
+++ b/statslib.html
@@ -122,7 +122,7 @@ pre {
 
 <hr style="height:2px;border-width:0;background-color:black">
 
-<h3 style="text-align: left;"><strong style="font-size: 95%;">Available distributions and Examples</strong></h3>
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Available Distributions and Examples</strong></h3>
 
 <p>cdf, pdf, quantile, and random variable generation:</p>
 <ul>
