--- a/statslib.html
+++ b/statslib.html
@@ -109,8 +109,8 @@ pre {
 <p>Features</p>
 <ul>
     <li>Compile-time (or run-time) evaluation of density functions, cumulative distribution functions, and quantile functions.
-    <li>Effective use of C++11 constexpr functions and the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
-    <li>Functions are called using a clean <strong>R</strong>-like syntax.</li>
+    <li>Effective use of C++11 constexpr functions with the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
+    <li>Clean <strong>R</strong>-like syntax.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
 </ul>
 
