--- a/mcmclib.html
+++ b/mcmclib.html
@@ -10,7 +10,7 @@
     <meta name="description" content="OptimLib: a C++ numerical optimization library.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="mcmc, Metropolis Hastings, RWMH, Differential Evolution, Metropolis-adjusted Langevin algorithm, MALA, Hamiltonian Monte Carlo, HMC, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
+    <meta name="keywords" content="mcmc, MCMC, Metropolis Hastings, RWMH, Differential Evolution, Metropolis-adjusted Langevin algorithm, MALA, Hamiltonian Monte Carlo, HMC, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
@@ -49,7 +49,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
-            $("#mcmchead").load("mcmc_header.html")
+            $("#mcmchead").load("mcmclib_header.html")
             $("#myfooter").load("footer.html")
         });
     </script>
@@ -65,7 +65,7 @@
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <div id="optimhead"></div>
+        <div id="mcmcmhead"></div>
 
 <div class="row">
     <div class="col-md-4">
