--- a/mcmclib.html
+++ b/mcmclib.html
@@ -96,7 +96,13 @@
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>C++11 implementations of several well-known MCMC methods, including Random Walk Metropolis-Hastings (RWMH), Hamiltonian Monte Carlo (HMC), and the Metropolis-adjusted Langevin algorithm (MALA).</li>
+    <li>C++11 implementations of several well-known MCMC methods, including:
+        <ul>
+            <li>Random Walk Metropolis-Hastings (RWMH);</li>
+            <li>Hamiltonian Monte Carlo (HMC); and</li>
+            <li>Metropolis-adjusted Langevin algorithm (MALA).</li>
+        </ul>
+    </li>
     <li>Support for multi-modal distributions with a parallelized implementation of the Differential Evolution (DE) MCMC algorithm.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
