--- a/mcmclib.html
+++ b/mcmclib.html
@@ -75,7 +75,7 @@
     <div class="col-md-4">
         <br>
         <br>
-        <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>MCMC</u></strong></h3>
+        <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>MCMCLib</u></strong></h3>
         <!-- <p style="text-align: center;"><a href="https://github.com/kthohr/mcmc" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p> -->
         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/mcmc" target="_blank"><img src="https://travis-ci.org/kthohr/mcmc.svg?branch=master" alt="optim Build"></a>
         <a href="https://codecov.io/github/kthohr/mcmc?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/mcmc/coverage.svg?branch=master" alt="Coverage Status"></a></p>
