--- a/mcmclib.html
+++ b/mcmclib.html
@@ -134,7 +134,7 @@ make install</pre>
     <li><code>-b dev</code> a 'development' build with install names set to the build directory (as opposed to an install path)</li>
     <li><code>-c</code> a coverage build</li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
-    <li><code>-o fast</code> enable aggressive compiler optimization features</li>
+    <li><code>-o</code> enable aggressive compiler optimization features: <code>-o fast</code> or <code>-o native</code></li>
     <li><code>-p</code> enable parallelization features (using OpenMP)</li>
 </ul>
 
