--- a/mcmclib.html
+++ b/mcmclib.html
@@ -65,7 +65,7 @@
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <div id="mcmcmhead"></div>
+        <div id="mcmchead"></div>
 
 <div class="row">
     <div class="col-md-4">
