--- a/bmr_header.html
+++ b/bmr_header.html
@@ -5,6 +5,17 @@
             <li><a href="bmlib.html">BMLib</a></li>
             <li><a href="bmr.html">BMR</a></li>
             <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">DSGE <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="bmr_docs_dsge_gensys.html">gensys</a></li>
+                    <li><a href="bmr_docs_dsge_uhlig.html">uhlig</a></li>
+                    <!-- <li class="divider"></li> -->
+                    <!-- <li><a href="bmr_docs_dsge.html">dsge</a></li> -->
+                    <!-- <li class="divider"></li> -->
+                    <!-- <li><a href="bmr_docs_dsgevar.html">dsgevar</a></li> -->
+                </ul>
+            </li>
+            <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">VARs <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="bmr_docs_vars_bvarm.html">bvarm</a></li>
