--- a/gcem.html
+++ b/gcem.html
@@ -74,7 +74,7 @@ pre {
         <div id="gcemhead"></div>
 
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 hidden-xs">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <img src="pics/gcem_log.png" class="img-responsive center-block">
     </div>
@@ -88,7 +88,7 @@ pre {
          <a class="github-button" href="https://github.com/kthohr/gcem" data-icon="octicon-star" data-count-href="/kthohr/gcem/stargazers" data-count-api="/repos/kthohr/gcem#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/gcem on GitHub">Star</a> 
          <a class="github-button" href="https://github.com/kthohr/gcem/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/gcem/network" data-count-api="/repos/kthohr/gcem#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/gcem on GitHub">Fork</a></p> 
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 hidden-xs">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <img src="pics/gcem_exp.png" class="img-responsive center-block">
     </div>
