--- a/bmr_docs_dsge_uhlig.html
+++ b/bmr_docs_dsge_uhlig.html
@@ -134,9 +134,9 @@ lrem_obj <- new(uhlig)
     <br>
 
     <li><code>P_sol</code> Solution matrix $P$.</li>
-    <li><code>Q_sol</code> Solution matrix $P$.</li>
-    <li><code>R_sol</code> Solution matrix $P$.</li>
-    <li><code>S_sol</code> Solution matrix $P$.</li>
+    <li><code>Q_sol</code> Solution matrix $Q$.</li>
+    <li><code>R_sol</code> Solution matrix $R$.</li>
+    <li><code>S_sol</code> Solution matrix $S$.</li>
 
     <br>
 
