--- a/bmlib.html
+++ b/bmlib.html
@@ -96,7 +96,9 @@ pre {
 
 <br>
 
-<p>Bayesian Macroeconometrics (BMLib) is a templated C++ library for estimating Bayesian Vector Autoregressive (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
+<p>BMLib is a templated C++ library for estimating Bayesian Vector Autoregressive (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
+
+<hr>
 
 <b>Features</b>
 <br>
