--- a/trame-rcpp.html
+++ b/trame-rcpp.html
@@ -102,7 +102,9 @@ pre {
 
 <br>
 
-<p>TraME-Rcpp is an R interface to TraME, a templated C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
+<p>TraME-Rcpp is an R interface to <a href="trame.html">TraME</a>, a templated C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
+
+<hr>
 
 <p><strong>Features</strong></p>
 <ul>
