--- a/trame.html
+++ b/trame.html
@@ -98,6 +98,8 @@
 
 <p>TraME (<b><i>Tra</i></b>nsportation <b><i>M</i></b>ethods for <b><i>E</i></b>conometrics) is a templated C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
 
+<hr>
+
 <b>Features</b>
 <br>
 <table border="0" cellpadding="0" cellspacing="0">
@@ -108,8 +110,8 @@
             <li>Flexible, templated C++11 library</li>
             <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a></li>
             <li>Nonlinear optimization using <a href="optimlib.html" target="_blank">OptimLib</a></li>
-            <li>Can link with Gurobi or GLPK</li>
-            <li>Simple R interface: TraME-Rcpp</li>
+            <li>Can link with <a href="http://www.gurobi.com/" target="_blank">Gurobi</a> or <a href="https://www.gnu.org/software/glpk/" target="_blank">GLPK</a></li>
+            <li>R interface: <a href="trame-rcpp.html">TraME-Rcpp</a></li>
         </ul>
         </td>
         <td>
