--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
                         <h6><em>R&R at Econometrica</em></h6>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
-                        <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse1">Abstract</a> | <a href="https://arxiv.org/pdf/1605.00499.pdf" target="_blank">Paper</a> </strong></h4>
+                        <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse1">Abstract</a> | <a href="docs/1605.00499.pdf" target="_blank">Paper</a> </strong></h4>
                     </div>
                     <div id="collapse1" class="panel-collapse collapse">
                         <div class="panel-body">
