--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>OptimLib: PSO</title>
+    <title>OptimLib: Particle Swarm Optimization</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
