--- a/mcmclib_docs_settings.html
+++ b/mcmclib_docs_settings.html
@@ -88,7 +88,7 @@ pre {
 
 <p><strong>Struct definition:</strong></p>
 <pre class="brush: cpp;">
-struct mcmc_settings {
+struct algo_settings {
     // general
     bool vals_bound = false;
 
