--- a/mcmclib_docs_de.html
+++ b/mcmclib_docs_de.html
@@ -108,7 +108,7 @@ pre {
 
 <pre class="brush: cpp;">
 bool de(const arma::vec& initial_vals, arma::cube& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data);
-bool de(const arma::vec& initial_vals, arma::cube& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data, mcmc_settings& settings);
+bool de(const arma::vec& initial_vals, arma::cube& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data, algo_settings& settings);
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
@@ -241,7 +241,7 @@ int main()
 
     //
 
-    mcmc::mcmc_settings settings;
+    mcmc::algo_settings settings;
 
     arma::vec initial_val(1);
     initial_val(0) = 1.0;
