--- a/mcmclib_docs_hmc.html
+++ b/mcmclib_docs_hmc.html
@@ -108,7 +108,7 @@ pre {
 
 <pre class="brush: cpp;">
 bool hmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data);
-bool hmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, mcmc_settings& settings);
+bool hmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, algo_settings& settings);
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
@@ -228,7 +228,7 @@ bool hmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;d
      initial_val(0) = mu + 1; // mu
      initial_val(1) = sigma + 1; // sigma
  
-     mcmc::mcmc_settings settings;
+     mcmc::algo_settings settings;
  
      settings.hmc_step_size = 0.10;
      settings.hmc_n_burnin = 1000;
