--- a/mcmclib_docs_mala.html
+++ b/mcmclib_docs_mala.html
@@ -108,7 +108,7 @@ pre {
 
 <pre class="brush: cpp;">
 bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data);
-bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, mcmc_settings& settings);
+bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, algo_settings& settings);
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
@@ -227,7 +227,7 @@ int main()
     initial_val(0) = mu + 1; // mu
     initial_val(1) = sigma + 1; // sigma
 
-    mcmc::mcmc_settings settings;
+    mcmc::algo_settings settings;
 
     settings.mala_step_size = 0.10;
     settings.mala_n_burnin = 1000;
