--- a/optimlib_docs_settings.html
+++ b/optimlib_docs_settings.html
@@ -88,7 +88,7 @@ pre {
 
 <p><strong>Struct definition:</strong></p>
 <pre class="brush: cpp;">
-struct opt_settings {
+struct algo_settings {
     // general
     int conv_failure_switch = 0;
     int iter_max = 2000;
