--- a/optimlib_header.html
+++ b/optimlib_header.html
@@ -20,7 +20,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Misc <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="optimlib_docs_settings.html">opt_settings</a></li>
+                    <li><a href="optimlib_docs_settings.html">Settings</a></li>
                 </ul>
             </li>
         </ol>
