--- a/statslib.html
+++ b/statslib.html
@@ -162,6 +162,10 @@ pdf and random variable generation only:
 
     // evaulate the Laplacian quantile at p = 0.1, mu = 0, sigma = 1
     double qval_1 = stats::qlaplace(0.1,0.0,1.0)
+
+    // matrix input of beta-distributed random variables
+    arma::mat beta_rvs = stats::rbeta(100,100,3.0,2.0);
+    arma::mat beta_cdf_vals = stats::pbeta(beta_rvs,3.0,2.0);
 </pre>
 
 
