--- a/statslib.html
+++ b/statslib.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Bayesian Macroeconometrics in R (BMR)">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="Statistics, Probability, Distributions, C++, Cpp, C++11, constexpr, Econometrics" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
