--- a/statslib.html
+++ b/statslib.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Bayesian Macroeconometrics in R (BMR)">
+    <meta name="description" content="StatsLib is a templated C++ library for fast computation of statistical distribution functions.">
     <meta name="author" content="Keith O'Hara">
 
     <meta name="keywords" content="Statistics, Probability, Distributions, C++, Cpp, C++11, constexpr, Econometrics" />
